Single iteration in generic importer